# Olink_UKB

./: .gitignore  README.md  covariableSelection.toml  pyproject.toml
covariableSelection/: __init__.py
covariableSelection/data/: __init__.py  load.py  preprocesing.py  transform.py
covariableSelection/evaluation/: __init__.py  visualisate.py
covariableSelection/models/: __init__.py
covariableSelection/scripts/ibd/: phenotype.py
covariableSelection/training/: __init__.py
covariableSelection/utils/: logger.py  renameColums.py
notebooks/ibd/: phenotype.ipynb
